# openmc

./: pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
scripts/: openmc
tools/ci/: gha-install.sh
